# prisma-engines

./: .envrc  Cargo.toml  dockerfail
.buildkite/: engineer
introspection-engine/connectors/sql-introspection-connector/: Cargo.toml
introspection-engine/connectors/sql-introspection-connector/src/: version_checker.rs
libs/prisma-models/src/projections/: model_projection.rs
libs/prisma-value/src/: lib.rs
libs/sql-schema-describer/: Cargo.toml
libs/sql-schema-describer/src/: sqlite.rs
libs/sql-schema-describer/tests/: introspection_tests.rs
libs/test-setup/src/: lib.rs
migration-engine/cli/: Cargo.toml
migration-engine/cli/src/: commands.rs
migration-engine/connectors/sql-migration-connector/: Cargo.toml
migration-engine/connectors/sql-migration-connector/src/: lib.rs  sql_destructive_changes_checker.rs  sql_migration_persistence.rs
migration-engine/migration-engine-tests/src/: test_api.rs
migration-engine/migration-engine-tests/tests/: existing_data_tests.rs  migration_tests.rs
prisma/: schema.prisma
prisma/db/: Chinook.db
query-engine/connectors/cached-connector/: Cargo.toml  thoughts
query-engine/connectors/cached-connector/src/: lib.rs
query-engine/connectors/query-connector/src/: write_args.rs
query-engine/connectors/sql-query-connector/src/: lib.rs  row.rs
query-engine/core/src/query_document/: parse_ast.rs  parser.rs
query-engine/core/src/response_ir/: internal.rs  mod.rs
query-engine/query-engine/: Cargo.toml
query-engine/query-engine/src/: exec_loader.rs  lib.rs
vb-query/: Cargo.toml
vb-query/src/: lib.rs  mainx.rs
(+15 files in other folders)
