[package]
name = "vb-query"
version = "0.1.0"
authors = ["nampdn <nampdn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vb_query"
crate-type = ["cdylib"] #dynamic library

[dependencies]
query-engine = { path = "../query-engine/query-engine" }
